added resume builder section

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_GROQ_API_KEY=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
+REACT_APP_RAPID_API_KEY=131d5a08fbmshc2eea23d3339ee9p1b9649jsn5468a549aeaa'
