--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@monaco-editor/react": "^4.4.7",
-    "axios": "^1.4.0",
+    "@react-pdf/renderer": "^4.3.0",
+    "axios": "^1.8.1",
+    "file-saver": "^2.0.5",
     "groq-sdk": "^0.3.0",
     "lucide-react": "^0.474.0",
     "react": "^18.2.0",
