--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "@monaco-editor/react": "^4.4.7",
     "@react-pdf/renderer": "^4.3.0",
-    "axios": "^1.8.1",
+    "axios": "^1.8.4",
     "file-saver": "^2.0.5",
     "groq-sdk": "^0.3.0",
     "lucide-react": "^0.474.0",
+    "mammoth": "^1.9.0",
+    "pdfjs-dist": "^5.1.91",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
