--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pdfjs-dist": "^5.1.91",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.3"
